--- a/task1/task001/index.html
+++ b/task1/task001/index.html
@@ -1,121 +1,196 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>task001</title>
-	<meta charset=UTF-8>
+	<meta charset="UTF-8">
+	<title>任务一:零基础HTML编码</title>
 </head>
 <body>
-	<h1>网站一级标题</h1>
-	<ul>
-		<li><a href="#">导航链接一</a></li>
-		<li><a href="#">导航链接二</a></li>
-		<li><a href="#">导航链接三</a></li>
-		<li><a href="#">导航链接四</a></li>
-	</ul>
-	<h2>文章二级标题</h2>
-	<h2>文章二级标题</h2>
-	<p>文章作者 文章发表时间</p>
-	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<br/>换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接连接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com" target="_blank">这里有一个链接点击后打开新窗口链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-	<h2>另一篇文章一级标题</h2>
-	<h2>文章二级标题</h2>
-	<p>文章作者 文章发表时间</p>
-	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<br/>换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br />这是一个很长很长的段落，这是一个很长很长的段落，<a href="http://ife.baidu.com">这里有一个链接连接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落，<b>这里有个粗体字</b>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<ul>
-		<li>列表项目一</li>
-		<li>列表项目二</li>
-		<li>列表项目三</li>
-	</ul>
-	<h2>图片</h2>
-	<ul>
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img salt="Iron-Man" rc="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	<p>好看的图片</p>
-	<img alt="Iron-Man" src="../images/task001.jpg">
-	</ul>
-	<h2>最后一篇文章一级标题</h2>
-	<h2>文章二级标题</h2>
-	<p>文章作者 文章发表时间</p>
-	<ol>
-		<li>排名1</li>
-		<li>排名2</li>
-		<li>排名3</li>
-	</ol>
-	<p>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</p>
-	<table border='1'>
-		<tr>
-			<th>表头</th>
-			<th>表头</th>
-			<th>表头</th>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="#">操作</a></td>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="#">操作</a></td>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="#">操作</a></td>
-		</tr>
-		<tr>
-			<td>表内容单元格</td>
-			<td>表内容单元格</td>
-			<td><a href="#">操作</a></td>
-		</tr>
-		<tr>
-			<td>总计</td>
-			<td colspan="2">1000</td>
-		</tr>
-	</table>
-	<h2>这里以后是一个侧边栏，这是侧边栏的标题</h2>
-	<h2>侧栏注册窗口标题</h2>
-	<p>请输入邮箱地址：<input type="text" placeholder="这是一个文本输入框"></p>
-	<p>邮箱地址请按要求格式输入</p>
-	<p>请输入密码：<input type="password" placeholder="这是一个文本输入框">请重复输入密码：<input type="password" placeholder="这是一个文本输入框"></p>
-	<p>密码请为6-16位英文数字</p>
-	<form>
-		性别：
-		<input type="radio" name="sex" checked="checked">男
-		<input name="sex" type="radio">女
-		城市：
-		<select>
-			<option value="北京" selected="selected">北京</option>
-			<option value="南京">南京</option>
-			<option value="上海">上海</option>
-			<option value="杭州">杭州</option>
-		</select>
-		爱好：
-		<input name="hobby" type="checkbox">运动
-		<input name="hobby" type="checkbox">艺术
-		<input name="hobby" type="checkbox">科学
-		个人描述：
-		<textarea placeholder="这是一个多行输入框，输入您的个人描述"></textarea>
-		<input type="submit" value="确认提交">
-	</form>
-	<p>版权所有©</p>
+	<header>
+		<h1>网站一级标题</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="#">导航链接一</a></li>
+			<li><a href="#">导航链接二</a></li>
+			<li><a href="#">导航链接三</a></li>
+			<li><a href="#">导航链接四</a></li>
+		</ul>
+	</nav>
+	<article>
+		<section>
+			<h2>文章一级标题</h2>
+			<h2>文章二级标题</h2>
+			<p><span>文章作者 文章发表时间</span></p>
+			<p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，
+			<br/>换行了
+			<br/>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，换行了
+			<br/>这是一个很长的段落，这是一个很长的段落，
+			<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>
+			这是一个很长的段落，这是一个很长的段落，<b>这里有个粗体字</b>这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落。</p>
+			<p><img src="../images/task001.jpg" alt="task1的图片"></p>
+			<p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，
+			<br/>这是一个很长的段落，换行了
+			<br/>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，<b>这里有个粗体字</b>这是一个很长的段落，
+			这是一个很长的段落，
+			<a href="http://ife.baidu.com" target="_blank">这里有一个链接新窗口链接到http://ife.baidu.com</a>
+			这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落。</p>
+		</section>
+		<section>
+			<h2>另一篇文章一级标题</h2>
+			<h2>文章二级标题</h2>
+			<p><span>文章作者 文章发表时间</span></p>
+			<p>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，
+			<br/>换行了
+			<br/>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，换行了
+			<br/>这是一个很长的段落，这是一个很长的段落，
+			<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>
+			这是一个很长的段落，这是一个很长的段落，<b>这里有个粗体字</b>这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，
+			这是一个很长的段落，这是一个很长的段落。</p>
+			<p><img src="../images/task001.jpg" alt="task1的图片"></p>
+			<ul>
+				<li>列表项目一</li>
+				<li>列表项目二</li>
+				<li>列表项目三</li>
+			</ul>
+			<h2>图片</h2>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>
+			<figure>
+				<p>好看的图片</p>
+				<img src="../images/task001.jpg" alt="task1的图片">
+			</figure>	
+		</section>
+		<section>
+			<h2>最后一篇文章一级标题</h2>
+			<h2>文章二级标题</h2>
+			<p><span>文章作者 文章发表时间</span></p>
+			<ol>
+				<li>排名1</li>
+				<li>排名2</li>
+				<li>排名3</li>
+			</ol>
+			<span>下面是一个表格，给表格加了一个border="1"好让你看出是表格</span>
+			<table border="1">
+				<!-- <caption>下面是一个表格，给表格加了一个border="1"好让你看出是表格</caption> -->
+				<tr>
+					<th>表头</th>
+					<th>表头</th>
+					<th>表头</th>
+				</tr>
+				<tr>
+					<td>表内容单元格</td>
+					<td>表内容单元格</td>
+					<td><a href="#">操作</a></td>
+				</tr>
+				<tr>
+					<td>表内容单元格</td>
+					<td>表内容单元格</td>
+					<td><a href="#">操作</a></td>
+				</tr>
+				<tr>
+					<td>表内容单元格</td>
+					<td>表内容单元格</td>
+					<td><a href="#">操作</a></td>
+				</tr>
+				<tr>
+					<td>表内容单元格</td>
+					<td>表内容单元格</td>
+					<td><a href="#">操作</a></td>
+				</tr>
+				<tr>
+					<td>总计</td>
+					<td colspan="2">100</td>
+				</tr>
+			</table>
+		</section>
+	</article>
+	<aside>
+		<h2>这里以后是一个侧栏，这是侧栏的标题</h2>
+		<h2>侧栏注册窗口标题</h2>
+		<form>
+			<label for="email">请输入邮箱地址:</label>
+			<input id="email" type="text" name="email" placeholder="这是一个文本输入框">
+			<p>邮箱地址请按要求格式输入</p>
+
+			<label for="pass">请输入密码:</label>
+			<input id="pass" type="password" name="password" placeholder="这是一个文本输入框">
+			<label for="repass">请重复输入密码:</label>
+			<input id="repass" type="password" name="repassword" placeholder="这是一个文本输入框">
+			<p>密码请为6-16位英文数字</p>
+
+			<label>性别：</label>
+			<input id="male" type="radio" name="sex" value="male" checked="checked">
+			<label for="male">男</label>
+			<input id="female" type="radio" name="sex" value="female">
+			<label for="female">女</label>
+
+			<label for="city">城市</label>
+			<select id="city" name="city">
+				<option value="bj">北京</option>
+				<option value="xt">邢台</option>
+				<option value="hrb">哈尔滨</option>
+			</select>
+
+			<label>爱好</label>
+			<input id="sport" type="checkbox" name="sport">
+			<label for="sport">运动</label>
+			<input id="art" type="checkbox" name="art">
+			<label for="art">艺术</label>
+			<input id="scie" type="checkbox" name="scie">
+			<label for="scie">科学</label>
+
+			<label for="selfdes">个人描述</label>
+			<textarea id="selfdes" placeholder="这是一个多行输入框，输入您的个人描述"></textarea>
+
+			<input type="submit" value="确认提交">
+		</form>
+	</aside>
+	<footer><small>版权所有©</small></footer>
 </body>
 </html>
