--- a/task1/task011/index.html
+++ b/task1/task011/index.html
@@ -78,8 +78,8 @@
 						<p><span>这是文案</span></p>
 					</section>
 					<section class="copywriter">
-						<p>这是文案</p>
-						<p>这是文案</p>
+						<p><span>这是文案</span></p>
+						<p><span>这是文案</span></p>
 					</section>
 				</section>
 				<section class="module-content-1">
@@ -87,12 +87,12 @@
 						<img src="images/module.png">
 					</section>
 					<section class="copywriter">
-						<p>这是文案</p>
-						<p>这是文案</p>
+						<p><span>这是文案</span></p>
+						<p><span>这是文案</span></p>
 					</section>
 					<section class="copywriter">
-						<p>这是文案</p>
-						<p>这是文案</p>
+						<p><span>这是文案</span></p>
+						<p><span>这是文案</span></p>
 					</section>
 				</section>
 			</section>
