--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -117,9 +117,9 @@
         <p class="author col-md-12">by <a href="http://codepen.io/fantasydai/" target="_blank">fantasyDai</a></p>
     </div>
     <div id="map"></div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=TGk8bcRkMlFSdCNfL4MZqoCA8y18UVKW"></script>
     <script type="text/javascript" src="http://developer.baidu.com/map/jsdemo/demo/convertor.js"></script>
-    <script type="text/javascript" src="script/jquery.js"></script>
     <script type="text/javascript" src="script/main.js"></script>
 </body>
 </html>
