--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -97,16 +97,16 @@
                         </div>
                     </td>
                     <td class="col-md-4 day2">
-                        <div class="forecastDay">8/3 周三</div>
+                        <div class="forecastDay"></div>
                         <img src="images/00.png" class="weatherIcon" alt="">
-                        <div class="forecastText">晴</div>
+                        <div class="forecastText"></div>
                         <div class="forecastTemp">
                         </div>
                     </td>
                     <td class="col-md-4 day3">
-                        <div class="forecastDay">8/3 周三</div>
+                        <div class="forecastDay"></div>
                         <img src="images/00.png" class="weatherIcon" alt="">
-                        <div class="forecastText">晴</div>
+                        <div class="forecastText"></div>
                         <div class="forecastTemp">
                         </div>
                     </td>
