--- a/resume/print.html
+++ b/resume/print.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>戴越越的简历</title>
-    <meta name="description" content="我是一个充满活力、对前端由衷热爱、善于发现问题的前端工程师。我目前正在寻找前端工程师岗位，希望借此机会为贵司献上我的一点绵薄之力，快招我到碗里来吧！">
+    <meta name="description" content="我是一个对前端由衷热爱、善于发现问题的前端工程师。我目前正在寻找前端工程师岗位，希望可以成为贵司的一员！">
     <meta name="keywords" content="戴越越,前端,工作,简历">
     <link rel="stylesheet" href="dist/css/print.min.css">
     <link rel="stylesheet" href="dist/css/fontello.min.css">
@@ -88,7 +88,7 @@
                 </li>
         </ul>
         <div class="note">
-            <p>热爱前端,正在寻找前端工程师岗位</p>
+            <p>我是一个对前端由衷热爱、善于发现问题的前端工程师。我目前正在寻找前端工程师岗位，希望可以成为贵司的一员！</p>
             <p>由于 PDF 受篇幅限制，推荐使用下面的在线简历查看。</p>
         </div>
         <div class="qr">
