--- a/resume/print.html
+++ b/resume/print.html
@@ -94,7 +94,7 @@
         <div class="qr">
             <div class="qr-in">
                 <img src="img/qr.png">
-                <p>在线简历: <a href="http://html.love/" target="_blank">戴越越的简历</a></p>
+                <p>在线简历: <a href="http://elegantjs.github.io/resume" target="_blank">戴越越的简历</a></p>
             </div>
         </div>
     </div>
