--- a/resume/print.html
+++ b/resume/print.html
@@ -106,44 +106,44 @@
                 <ul class="exp">
                     <li>
                         <div class="circle"></div>
-                        <h4>GTD-Tool <a href="https://github.com/fantasydai/GTD-tools" target="_blank">https://github.com/fantasydai/GTD-tools</a></h4>
+                        <h4>GTD-Tool <a href="http://elegantjs.github.io/GTDTool" target="_blank">http://elegantjs.github.io/GTDTool</a></h4>
                         <p>使用React + Redux + React-Router实现的一个Web版GTD-Tools(个人任务管理系统),可以实现分类、任务的增、删、查、改等操作。样式部分采用CSS Module实现，部分代码采用es2015语法，构建工具采用NPM + Babel + Webpack </p>
                     </li>
                     <li>
                         <div class="circle"></div>
                         <h4>
-                            基于React的简易Markdown Previewer <a href="https://github.com/fantasydai/freeCodeCamp_Project/tree/master/reactMarkdown" target="_blank">https://github.com/fantasydai/freeCodeCamp_Project/tree/master/reactMarkdown</a>
+                            基于React的简易Markdown Previewer <a href="http://elegantjs.github.io/reactMarkdown/" target="_blank">http://elegantjs.github.io/reactMarkdown/</a>
                         </h4>
                         <p>采用react实现的一个简易Markdown编辑器，可以编辑文档并实时预览解析后的文档，Markdown解析引擎采用marked解析器</p>
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>Local Weather App <a href="https://github.com/fantasydai/freeCodeCamp_Project/tree/master/WeatherApp" target="_blank">https://github.com/fantasydai/freeCodeCamp_Project/tree/master/WeatherApp</a></h4>
+                        <h4>Local Weather App <a href="http://elegantjs.github.io/WeatherApp/" target="_blank">http://elegantjs.github.io/WeatherApp/</a></h4>
                         <p>基于jQuery和BootStrap实现的一款Local Weather应用，自动获取用户当前所在位置，并展示当前城市近几天详细天气情况并在地图上展示当前所在位置，还可以手动搜索任意城市天气情况</p>
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>Pomodoro Clock <a href="https://github.com/fantasydai/freeCodeCamp_Project/tree/master/PomodoroClock" target="_blank">https://github.com/fantasydai/freeCodeCamp_Project/tree/master/PomodoroClock</a></h4>
+                        <h4>Pomodoro Clock <a href="http://elegantjs.github.io/PomodoroClock/" target="_blank">http://elegantjs.github.io/PomodoroClock/</a></h4>
                         <p>基于jQuery实现的一款样式精美的网页版番茄钟</p>
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>爱心鱼小游戏 <a href="https://github.com/fantasydai/HTML5_Games/tree/master/fish%20game" target="_blank">https://github.com/fantasydai/HTML5_Games/tree/master/fish%20game</a></h4>
+                        <h4>爱心鱼小游戏 <a href="http://elegantjs.github.io/fishGame/" target="_blank">http://elegantjs.github.io/fishGame/</a></h4>
                         <p>基于HTML5 Canvas实现的一款爱心鱼小游戏</p>
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>常见排序算法的动画演示 <a href="https://github.com/fantasydai/IFE_Spring_2016/tree/master/task2/task19" target="_blank">https://github.com/fantasydai/IFE_Spring_2016/tree/master/task2/task19</a></h4>
+                        <h4>常见排序算法的动画演示 <a href="http://elegantjs.github.io/task2/task19/" target="_blank">http://elegantjs.github.io/task2/task19/</a></h4>
                         <p>常见排序算法如冒泡、插入等方法的动画演示</p>
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>计算器 <a href="https://github.com/fantasydai/freeCodeCamp_Project/tree/master/caculator" target="_blank">https://github.com/fantasydai/freeCodeCamp_Project/tree/master/caculator</a></h4>
+                        <h4>计算器 <a href="http://elegantjs.github.io/caculator/" target="_blank">http://elegantjs.github.io/caculator/</a></h4>
                         <p>一款网页版计算器，可以实现加、减、乘、除等常规计算</p>
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>听指令的小方块 <a href="https://github.com/fantasydai/IFE_Spring_2016/tree/master/task2/task35" target="_blank">https://github.com/fantasydai/IFE_Spring_2016/tree/master/task2/task35</a></h4>
+                        <h4>听指令的小方块 <a href="http://elegantjs.github.io/task2/task35/" target="_blank">http://elegantjs.github.io/task2/task35/</a></h4>
                         <p>输入一串指令，使方块按照指令正确移动</p>
                     </li>
                 </ul>
